--- a/code/index.html
+++ b/code/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Example</title> <!---Step 1: Create a title or name for your page--->
+	<title>Nairy's web</title> <!---Step 1: Create a title or name for your page--->
 	
     	<!--Online CSS files for styling the page-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -11,9 +11,9 @@
 		html, body{font-size:16px;color: #ffffff;background-color: black; /*Optional Step: Change the top tab color*/}
 
 		/*Step 2: Change the color of these sections ~ The text is white so darker colors are better*/
-		.section-1 {background-color: #0a5975;}
-		.section-2 {background-color: #08465e;}
-		.section-3 {background-color: #18444e;}
+		.section-1 {background-color: #ff80ff;}
+		.section-2 {background-color: #800080;}
+		.section-3 {background-color: #000000;}
 
 		/*Don't Touch Please Scroll to About - Line 43*/
 		a {color: blue;}
@@ -41,9 +41,9 @@
 		<section id="about" class="section section-1">
         	<h3 class="title is-3">About Me</h3><center>
                 <!---Step 3: Copy and add an image address on the next line in the quotations---><img class="avatar" 
-			    	src="https://thumbs.dreamstime.com/b/vector-icon-user-avatar-web-site-mobile-app-man-face-flat-style-social-network-profile-45837377.jpg"><br/>
+			    	src="https://i.pinimg.com/474x/a1/8d/82/a18d822846d1ee2f37e77477e3e3c979.jpg"><br/>
 			</center><p class="intro">
-				Step 4: Add information about you here! You can delete this and add anything you want about you. (i.e. hobbies, favorite color)
+				My name is Nairy Recinos! I am currently a college student thinking about entering the Psychology field!
 			</p>
 		</section>
         
@@ -54,7 +54,7 @@
 		<!-- Content -->
 		<section  id="contents" class="section section-3"><h3 class="title is-3">Content</h3>
                 	<p class="intro">
-				Step 5: Add your content here. Whatever you want, just have fun! &#10024;<br/>
+			&#10084;<br/>
 			</p>
 		</section>
 		
